# a-tour-of-go-in-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  a-tour-of-go-in-haskell.cabal  firebase.json  stack.yaml
app/: Main.hs  Support.hs
src/: A_Tour_of_Go.hs
src/A_Tour_of_Go/Concurrency/: BufferedChannels.hs  Channels.hs  DefaultSelection.hs  EquivalentBinaryTrees.hs  EquivalentBinaryTreesU.hs  ExerciseEquivalentBinaryTrees.hs  ExerciseWebCrawler.hs  Goroutines.hs  RangeAndClose.hs  Select.hs  SyncMutex.hs  Tree.hs  WebCrawler.hs  WebCrawlerU.hs
static/css/: mystyle.css
static/heterocephalus/: index.html  template.html  test.html
static/heterocephalus/concurrency/: goroutines.html
static/i18n/: en_US.yaml  ja_JP.yaml  pt_BR.yaml
test/doctest/: Doctest.hs
test/hspec/A_Tour_of_Go/Concurrency/: DefaultSelection.hs  DefaultSelectionSpec.hs  TreeSpec.hs
