name:                a-tour-of-go-in-haskell
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/syocy/a-tour-of-go-in-haskell#readme
bug-reports:         https://github.com/syocy/a-tour-of-go-in-haskell/issues
license:             BSD3
license-file:        LICENSE
author:              syocy
maintainer:          osmium.k@gmail.com
copyright:           2017 syocy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     A_Tour_of_Go
                     , A_Tour_of_Go.Concurrency.Goroutines
                     , A_Tour_of_Go.Concurrency.Channels
  build-depends:       base >= 4.7 && < 5
                     , async >= 2.1 && < 3
                     , stm >= 2.4 && < 3
                     , safe-exceptions
  default-language:    Haskell2010

executable a-tour-of-go-in-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , a-tour-of-go-in-haskell
  default-language:    Haskell2010

test-suite a-tour-of-go-in-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , a-tour-of-go-in-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/syocy/a-tour-of-go-in-haskell
